--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
+# Distribution / papip install --upgrade pip
+ckaging
 .Python
 build/
 develop-eggs/
@@ -102,3 +103,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Ignore .idea
+.idea/
